<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/list_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name_view"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/nameview"
                android:enabled="false"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/employeeid_view"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/employeeid_view"
                android:enabled="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btndel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttondel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/employeeid_view"
                app:layout_constraintTop_toBottomOf="@+id/employeeid_view" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonupdate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/name_view"
                app:layout_constraintTop_toBottomOf="@+id/name_view" />

            <Button
                android:id="@+id/btncupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttoncupdate"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/name_view"
                app:layout_constraintTop_toBottomOf="@+id/name_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>